
# Copyright (c) 2012-2014 Stefan Eilemann <eile@eyescale.ch>

include(files.cmake)

list(APPEND LUNCHBOX_LINK_LIBRARIES ${PTHREAD_LIBRARIES} ${Boost_LIBRARIES})
if(WIN32)
  list(APPEND LUNCHBOX_LINK_LIBRARIES ws2_32 mswsock)
endif(WIN32)
if(LINUX)
  list(APPEND LUNCHBOX_LINK_LIBRARIES dl rt)
endif()
if(HWLOC_FOUND)
  list(APPEND LUNCHBOX_LINK_LIBRARIES ${HWLOC_LIBRARIES})
endif(HWLOC_FOUND)
if(DNSSD_FOUND)
  list(APPEND LUNCHBOX_LINK_LIBRARIES ${DNSSD_LIBRARIES})
endif()
if (MPI_FOUND)
  include_directories(${MPI_C_INCLUDE_PATH})
  list(APPEND LUNCHBOX_LINK_LIBRARIES ${MPI_LIBRARIES})
endif()

add_definitions(-DEQ_PLUGIN_BUILD -DHAVE_BYTESWAP_H)
if(NOT WIN32 AND NOT CMAKE_COMPILER_IS_XLCXX)
  add_definitions(-DHAVE_BUILTIN_CTZ -DHAVE_BUILTIN_EXPECT)
endif()

if (WIN32) 
  if (BUILD_SHARED_LIBS)
    add_definitions(-DLUNCHBOX_SHARED) 
  else(BUILD_SHARED_LIBS)
    add_definitions(-DLUNCHBOX_STATIC)
  endif(BUILD_SHARED_LIBS)
endif (WIN32)

if(NOT WIN32 AND NOT CMAKE_COMPILER_IS_XLCXX)
  add_definitions(-DHAVE_BUILTIN_CTZ -DHAVE_BUILTIN_EXPECT)
endif()
add_definitions(-DHAVE_BYTESWAP_H)
add_library(${LIBRARY} SHARED ${LUNCHBOX_ALL})
target_link_libraries(${LIBRARY} ${LUNCHBOX_LINKLIBS})
set_target_properties(${LIBRARY}
  PROPERTIES VERSION ${VERSION} SOVERSION ${VERSION_ABI})
BBP_SET_LIB_OPTIONS(${LIBRARY} ${LIBRARY} SHARED)
ADD_GLOBAL_VARIABLE(PROJECT_EXPORTED_TARGETS_BUILD ${LIBRARY})

#common_library(Lunchbox)

source_group(\\ FILES CMakeLists.txt)
source_group(plugin FILES ${PLUGIN_HEADERS})
source_group(compressor FILES ${LUNCHBOX_COMPRESSORS})
source_group(lunchbox FILES ${LUNCHBOX_PUBLIC_HEADERS} ${LUNCHBOX_HEADERS}
  ${LUNCHBOX_SOURCES})

install(TARGETS ${LIBRARY} EXPORT ${PROJECT_EXPORTED_TARGETS}
        ARCHIVE DESTINATION ${LIBRARY_DIR} COMPONENT dev
        RUNTIME DESTINATION bin COMPONENT lib
        LIBRARY DESTINATION ${LIBRARY_DIR} COMPONENT lib)

install(FILES ${OPTIONS_CMAKE} DESTINATION ${CMAKE_MODULE_INSTALL_PATH} COMPONENT dev)
